Work on loot tables